# circleci-example

./: .coverage  .gitignore  .pre-commit-config.yaml  pyproject.toml
.circleci/: config.yml
tests/: test_calculator.py
